cncProd/force-app/main/default/objects/Lead/fields/Address_Line_5__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_5__c</fullName>
    <label>Address Line 5</label>
    <type>TextArea</type>
</CustomField>