cncProd/force-app/main/default/objects/Lead/fields/Feedback_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Question_3__c</fullName>
    <label>What other brands are you considering?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>