cncProd/force-app/main/default/objects/Lead/fields/Lead_Contact_extId__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_extId__c</fullName>
    <externalId>true</externalId>
    <label>Lead_Contact_extId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>