cncProd/force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <formula>IF(Probability__c == 0.9, &apos;Hot&apos;, IF(Probability__c == 0.7, &apos;Warm&apos;, &apos;Cold&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>