cncProd/force-app/main/default/objects/Lead/fields/LeadAssignedStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadAssignedStatus__c</fullName>
    <formula>IF(Owner:User.UserRole.Name = &apos;CITCV Sales Consultant&apos;, &apos;Assigned&apos;,IF(Owner:User.UserRole.Name = &apos;CITPC Sales Consultant&apos;, &apos;Assigned&apos;,IF(Owner:User.UserRole.Name = &apos;KIACV Sales Consultant&apos;, &apos;Assigned&apos;,IF(Owner:User.UserRole.Name = &apos;KIAPC Sales Consultant&apos;, &apos;Assigned&apos;,&apos;Unassigned&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Assigned Status</label>
    <type>Text</type>
</CustomField>