cncProd/force-app/main/default/objects/Lead/fields/PDPA__c.field-meta.xml
<CustomField>
    <fullName>PDPA__c</fullName>
    <label>PDPA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>