cncProd/force-app/main/default/objects/Lead/fields/Signed_Up_For_Price_Alert__c.field-meta.xml
<CustomField>
    <fullName>Signed_Up_For_Price_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Up For Price Alert</label>
    <type>Checkbox</type>
</CustomField>