cncProd/force-app/main/default/objects/Lead/fields/UserBranchCode__c.field-meta.xml
<CustomField>
    <fullName>UserBranchCode__c</fullName>
    <formula>TEXT( CreatedBy.Branch_Code__c )</formula>
    <label>User Branch Code</label>
    <type>Text</type>
</CustomField>