cncProd/force-app/main/default/objects/Lead/validationRules/Lead_Validation_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Validation_Owner_Change</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(NOT(ISNEW()), ISCHANGED(OwnerId), $Profile.Name != &apos;System Administrator&apos;, OwnerId != $Setup.global_var__c.Default_Owner_C_C__c), true, false)</errorConditionFormula>
    <errorMessage>Sorry, you are not allowed to change lead owner.</errorMessage>
</ValidationRule>