cncProd/force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.SALUTATION</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads</label>
    <sharedTo>
        <role>CITCV_Sales_Manager</role>
        <role>CITPC_Sales_Manager</role>
        <role>KIACV_Sales_Manager</role>
        <role>KIAPC_Sales_Manager</role>
        <role>MITPC_Sales_Manager</role>
    </sharedTo>
</ListView>