cncProd/force-app/main/default/objects/Lead/listViews/My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Mine</filterScope>
    <label>My Open Leads</label>
</ListView>