cncProd/force-app/main/default/objects/Lead/listViews/Test_Drive.listView-meta.xml
<ListView>
    <fullName>Test_Drive</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Test Drive</value>
    </filters>
    <label>Test Drive</label>
</ListView>